--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
     "decimal.js": "^10.3.1",
     "parcel": "^2.2.1",
     "purescript": "^0.14.5",
     "purs-tidy": "^0.7.0",
     "spago": "^0.20.3",
+    "typescript": "^4.5.5",
     "xhr2": "^0.2.1"
   }
 }
