--- a/package.json
+++ b/package.json
@@ -4,10 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "spago build",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start:ts": "tsc -p ./tsconfig.json --watch",
-    "start": "parcel html/index.html"
+    "start": "parcel html/index.html",
+    "postinstall": "spago install",
+    "clean": "rm -rf node_modules output dce-output .spago dist/*.js *.lock .cache",
+    "build": "spago build",
+    "test": "spago test",
+    "esbuild": "esbuild --external:url --external:xhr2 --outfile=dist/main.js",
+    "bundle:build": "spago build --purs-args '--codegen corefn'",
+    "bundle:dce": "zephyr -f Main.main",
+    "bundle:esbuild": "npm run esbuild -- --bundle index.js --minify",
+    "bundle": "npm run bundle:build && npm run bundle:dce && npm run bundle:esbuild",
+    "serve-dev": "npm run esbuild -- --bundle index-dev.js --servedir=dist",
+    "serve-prod": "http-server dist"
   },
   "keywords": [],
   "author": "",
@@ -28,6 +37,8 @@
     "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "^17.0.11",
     "decimal.js": "^10.3.1",
+    "esbuild": "^0.14.36",
+    "http-server": "^14.1.0",
     "parcel": "^2.2.1",
     "purescript": "^0.14.5",
     "purs-tidy": "^0.7.0",
