--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-beautiful-dnd": "^13.1.0",
     "react-dnd": "^16.0.0",
     "react-dnd-html5-backend": "^16.0.0",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "use-debounce": "^7.0.1"
   },
   "devDependencies": {
     "@types/react": "^17.0.38",
