--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,5 @@
     "jsx": "react",
     "esModuleInterop": true
   },
-  "include": ["src/**/*.tsx"]
+  "include": ["src/**/*.tsx", "src/**/*.ts"]
 }
