--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "use-debounce": "^7.0.1"
   },
   "devDependencies": {
+    "@parcel/transformer-sass": "^2.5.0",
     "@types/react": "^17.0.38",
     "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "^17.0.11",
